tenants/triage-analysis-sast/pipeline/base/github-pr-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: route-github-pr-listener
spec:
  to:
    name: el-github-pr-listener
    weight: 100
    kind: Service
  host: github-pr-listener.apps.cluster-r7xnh.r7xnh.sandbox723.opentlc.com
  path: ''
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  port:
    targetPort: http-listener
  alternateBackends: []
